Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11933

[capi-unixdcr] replica items mismatch on destination cluster

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 3.0
    • 3.0-Beta, 3.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • Build 3.0.0-1133

    Description

      http://qa.hq.northscale.net/job/centos_x64--31_01--uniXDCR-P1/32/consoleFull

      [Test]
      ./testrunner i centos_x6431_01-uniXDCR-P1.ini GROUP=CHAIN,get-cbcollect-info=True,get-logs=False,stop-on-failure=False,get-coredumps=True -t xdcr.uniXDCR.unidirectional.replication_with_firewall_enabled,items=100000,rdirection=unidirection,ctopology=chain,GROUP=CHAIN;P1

      [Test Steps]
      1. Setup CAPI-Unixdcr Source and Destination cluster. (4-4 Nodes, bucket- default)
      2. Load 1M items on Source cluster.
      3. Wait for 10 second. Enable firewall on destination cluster.
      4. Disable firewall on destination cluster.
      5. Verify items on both the ends. Current items are expected -> 1M
      6. replica items are 99958 while 1M were expected.

      [2014-08-11 14:21:26,116] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [2014-08-11 14:21:31,163] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [2014-08-11 14:21:36,211] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [2014-08-11 14:21:41,257] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [2014-08-11 14:21:46,305] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [2014-08-11 14:21:51,351] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [2014-08-11 14:21:56,395] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [2014-08-11 14:22:02,439] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [2014-08-11 14:22:07,486] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [2014-08-11 14:22:12,535] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [2014-08-11 14:22:17,583] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [2014-08-11 14:22:22,632] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [2014-08-11 14:22:27,685] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [2014-08-11 14:22:32,737] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [2014-08-11 14:22:37,785] - [task:459] WARNING - Not Ready: vb_replica_curr_items 99958 == 100000 expected on '10.3.3.207:8091''10.3.3.209:8091''10.3.3.208:8091''10.3.3.210:8091', default bucket
      [

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            apiravi Aruna Piravi (Inactive)
            sangharsh Sangharsh Agarwal
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty