MB-11933: Only set cur snapshot when receving the first snapshot item

We were setting the current snapshot when recieving the snapshot
marker and this is incorrect because if we disconnect before recieving
any items for that snapshot then the next time the replica vbucket
tries to connect to the active the high seqno will be less than the
last snapshot start seqno and this will cause the stream request to
fail with invalid arguments.

Change-Id: I75e1f555656c24221b2697011df878c579dce70e
Reviewed-on: http://review.couchbase.org/40583
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>